Latest SpringBoot, bumped Cucumber and fixed DPO + DPV tests